# github_inventory

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  TODO.md  config_example.json  config_example.yaml  pyproject.toml  pytest.ini
.devcontainer/: Dockerfile  README.md  devcontainer.json  setup-claude.sh  setup-project.sh  setup-tools.sh
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  issue.yml  question.md
.github/workflows/: branch-protection.yml  ci.yml  claude-code-review.yml  claude.yml
docs/: CONTRIBUTING.md  GITHUB_CLI.md  README.md  devcontainer.md  github_workflows.md
docs/output_example/: README.md  repos.csv  starred_repos.csv
python_quicklook/: .gitignore  CLAUDE.md  NEXT_ITERATION_PLAN.md  README.md  REPORT_MOCKUP.md  SCRATCHPAD.md
python_quicklook/adhoc/ctags/: output.md  tags  test_ctags.sh
python_quicklook/adhoc/pydoc/: github_inventory.html  output.md  test_pydoc.sh
python_quicklook/adhoc/pyreverse/: output.md  test_pyreverse.sh
python_quicklook/adhoc/ripgrep/: output.md  test_ripgrep.sh
python_quicklook/archive/src/: asset_manager.py  configuration_analyzer.py  dependency_analyzer.py  diagram_generator.py  mermaid_generator.py  python_quicklook.py  report_generator.py
python_quicklook/archive/src/challenge/: directory_analyzer.py  hybrid_analyzer.py  max_leverage_analyzer.py  prototype_1_griffe.py
python_quicklook/archive/tests/: test_asset_manager.py  test_basic.py  test_configuration_analyzer.py  test_pdoc.py
python_quicklook/archive/tests/src/: sample_module.py
python_quicklook/docs/: PRD.md
python_quicklook/docs/dev/: issues.md
python_quicklook/docs/reports_challenge_1/: final_evaluation.md  working_optimal_fastapi.md  working_optimal_requests.md
python_quicklook/scavenge/: optimized_analyzer.py  prototype_2_treesitter.py  prototype_3_ast.py  working_optimal_analyzer.py
python_quicklook/src/: __init__.py  cli_analyzer.py  concise_report_generator.py  github_support.py  project_context.py
python_quicklook/src/challenge/: quick_analyze.py  ultra_optimized_analyzer.py
python_quicklook/tests/: __init__.py  test_all_prototypes.py  test_cli_analyzer.py  test_dependency_analyzer.py  test_diagram_generator.py  test_docstring_formatting.py  test_griffe.py  test_main_integration.py  test_project_context.py  test_tree_sitter.py
src/github_inventory/: __init__.py  batch.py  cli.py  config.py  exceptions.py  github_client.py  inventory.py  models.py  report.py
tests/: README.md  test_batch_integration.py  test_cli.py  test_cli_e2e.py  test_cli_integration.py  test_error_paths.py  test_integration.py  test_inventory.py  test_limit.py  test_path_manager.py  test_performance.py  test_report.py  test_yaml_config.py
tests/fixtures/: __init__.py  github_responses.py
