[project]
name = "github-inventory"
version = "0.1.0"
description = "A comprehensive GitHub repository inventory and analysis tool"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "hsb3"}
]
keywords = ["github", "inventory", "cli", "repositories", "starred"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]
dependencies = [
    "pandas>=1.3.0; python_version>='3.12'",
    "python-dotenv>=0.19.0",
]

[project.urls]
Homepage = "https://github.com/hsb3/github-inventory"
Repository = "https://github.com/hsb3/github-inventory"

[project.scripts]
gh-inventory = "github_inventory.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/github_inventory"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "A", "C4"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pymarkdownlnt>=0.9.32",
]

[tool.pymarkdownlnt]
disable-rules = ["MD013"]  # Line length too restrictive for docs

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "pandas",
    "pandas.*"
]
ignore_missing_imports = true
