[project]
name = "github_inventory"
version = "0.1.0"
description = "A comprehensive GitHub repository inventory and analysis tool"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "hsb3"}
]
keywords = ["github", "inventory", "cli", "repositories", "starred"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]
dependencies = [
    "pandas>=1.3.0; python_version>='3.12'",
    "python-dotenv>=0.19.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "networkx>=3.5",
    "pyvis>=0.3.2",
    "matplotlib>=3.10.5",
]

[project.urls]
Homepage = "https://github.com/hsb3/github_inventory"
Repository = "https://github.com/hsb3/github_inventory"

[project.scripts]
ghscan = "github_inventory.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-PyYAML",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/github_inventory"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "A", "C4", "S"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S108"]  # Allow assert statements and temp files in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-PyYAML",
    "pymarkdownlnt>=0.9.32",
    "pre-commit>=3.0.0",
    "pytest-cov>=6.2.1",
]

[dependency-groups]
analysis = [
    # Advanced static analysis and code quality tools
    "prospector>=1.17.0",
    "pylint>=3.3.0",
    "astroid>=3.3.0",
    "flake8>=7.3.0",
    "flake8-polyfill>=1.0.0",
    "pep8-naming>=0.10.0",
    "pycodestyle>=2.14.0",
    "pydocstyle>=6.3.0",
    "pyflakes>=3.4.0",
    "radon>=6.0.0",
    "pylint-celery>=0.3",
    "pylint-django>=2.6.0",
    "pylint-plugin-utils>=0.9.0",
    "dodgy>=0.2.0",
    "mccabe>=0.7.0",
    "requirements-detector>=1.4.0",
    "setoptconf-tmp>=0.3.0",
    # Documentation generation
    "pdoc>=15.0.0",
    # Code analysis and parsing
    "tree-sitter>=0.25.0",
    "tree-sitter-python>=0.23.0",
    # Utility dependencies
    "colorama>=0.4.6",
    "dill>=0.4.0",
    "graphviz>=0.21",
    "griffe>=1.12.0",
    "isort>=6.0.0",
    "jinja2>=3.1.0",
    "mando>=0.7.0",
    "markupsafe>=3.0.0",
    "semver>=3.0.0",
    "snowballstemmer>=3.0.0",
    "toml>=0.10.0",
    "tomlkit>=0.13.0"
]

[tool.pymarkdownlnt]
disable-rules = ["MD013"]  # Line length too restrictive for docs

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
# Temporarily disabled until we add type annotations to all functions
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "pandas",
    "pandas.*",
    "yaml"
]
ignore_missing_imports = true
